# vorocrust-meshing

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  README.md
cmake/: vc_common.cmake  vc_exodus.cmake  vc_functions.cmake  vc_git_tools.cmake  vc_kokkos.cmake  vc_kokkoskernels.cmake  vc_mpi.cmake  vc_openmp.cmake  vc_tpl_hdf5.cmake  vc_tpl_lapack.cmake  vc_tpl_netcdf.cmake  vc_tpl_openblas.cmake  vc_tpl_seacas.cmake  vc_tpl_tuckermpi.cmake  vc_tpl_zlib.cmake  vc_unix.cmake  vc_windows.cmake
src/: CMakeLists.txt
src/Meshing/: CMakeLists.txt  Config.h.in  MeshingCommon.cpp  MeshingCommon.h  MeshingConsole.cpp  MeshingConsole.h  MeshingExodusIO.cpp  MeshingExodusIO.h  MeshingGeometricalMethods.cpp  MeshingGeometricalMethods.h  MeshingLinearSolver.cpp  MeshingLinearSolver.h  MeshingMemoryHandler.cpp  MeshingMemoryHandler.h  MeshingOptionParser.h  MeshingPolyMesh.cpp  MeshingPolyMesh.h  MeshingRandomSampler.cpp  MeshingRandomSampler.h  MeshingSmartTree.cpp  MeshingSmartTree.h  MeshingSpheresMethods.cpp  MeshingSpheresMethods.h  MeshingTimer.cpp  MeshingTimer.h  MeshingVoroCrust.cpp  MeshingVoroCrust.h  MeshingVoroCrustSampler.cpp  MeshingVoroCrustSampler.h  MeshingVoroSpokes.cpp  MeshingVoroSpokes.h  MeshingVoronoiMesher.cpp  MeshingVoronoiMesher.h  README.md  Version.h.in  vc_mesh.cxx
src/Meshing/tests/: CMakeLists.txt  test_Mesh_OptionParserVCMesh.cpp
tests/: CMakeLists.txt
tests/datasets/: README.md
tests/datasets/Bird/: vc.in  vc_omp_4t.in
tests/datasets/Bracket/: vc.in  vc_omp_4t.in
tests/datasets/GDSA_Cube_Tests/Cube_Test_01/: vc.in
tests/datasets/GDSA_Cube_Tests/Cube_Test_02/: vc.in
tests/datasets/GDSA_Cube_Tests/Cube_Test_03/: vc.in
tests/datasets/GDSA_Cube_Tests/Cube_Test_04/: vc.in
tests/datasets/Non_Manifold_Box/: vc.in  vc_omp_4t.in
tests/datasets/OneBox/: README.md  vc.in  vc_exodus.in  vc_omp_4t.in  vc_vcg.in
tests/datasets/OneBox_monitoring_points/: check_points_in_mesh.py  monitoring_points.csv  run_series.sh  vc.in  vc_exodus.in  vc_omp_4t.in  vc_vcg.in
tests/datasets/Torus/: vc.in
tests/jenkinsfiles/: VoroCrust_pipeline_driver.jenkinsfile
tests/src/: CMakeLists.txt  test_exodus_simple.cpp  test_kokkos_hello.cpp  test_kokkoskernels_blas_abs.cpp  test_lapack.cpp  test_mpi_hello.cpp
